--- a/index.html
+++ b/index.html
@@ -148,10 +148,14 @@
 
         <!-- Block Selection -->
         <div id="block-selection" class="card p-8">
-             <div class="text-center mb-8">
+             <div class="text-center mb-8 flex flex-col sm:flex-row justify-center items-center gap-4">
                 <button id="add-word-btn" class="btn-primary inline-flex items-center gap-2">
                     <i class="ph-bold ph-plus-circle text-xl"></i>
                     <span>Add New Words</span>
+                </button>
+                <button id="reset-score-btn" class="btn-secondary inline-flex items-center gap-2">
+                    <i class="ph-bold ph-trash text-xl"></i>
+                    <span>Reset Progress</span>
                 </button>
              </div>
              <h2 class="text-xl font-bold text-slate-700 text-center mb-2">Word Blocks</h2>
@@ -260,6 +264,25 @@
         </div>
     </div>
 
+    <!-- Reset Score Modal -->
+    <div id="reset-score-modal" class="fixed inset-0 bg-slate-900 bg-opacity-50 backdrop-blur-sm flex items-center justify-center p-4 hidden z-50">
+        <div class="card w-full max-w-sm p-8">
+            <h2 class="text-2xl font-bold text-slate-800 mb-2">Reset Progress</h2>
+            <p class="text-slate-500 mb-6">This will reset your score and all practice lists. This action cannot be undone. Please enter the PIN to confirm.</p>
+            <form id="reset-score-form">
+                <div class="mb-4">
+                    <label for="pin-input" class="block text-sm font-medium text-slate-600 mb-2">PIN</label>
+                    <input type="password" id="pin-input" class="input-field w-full text-center tracking-widest" required maxlength="4" pattern="\d*">
+                     <p id="pin-error" class="text-red-500 text-sm mt-2 h-4"></p>
+                </div>
+                <div class="flex justify-end gap-4 mt-6">
+                    <button type="button" id="cancel-reset-score" class="btn-secondary">Cancel</button>
+                    <button type="submit" class="btn-primary bg-red-600 hover:bg-red-700">Reset Now</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script src="words.js"></script>
     <script type="module">
         // Firebase Imports
@@ -312,6 +335,12 @@
         const cancelAddWordBtn = document.getElementById('cancel-add-word');
         const newWordInput = document.getElementById('new-word');
         const newDefinitionInput = document.getElementById('new-definition');
+        const resetScoreBtn = document.getElementById('reset-score-btn');
+        const resetScoreModal = document.getElementById('reset-score-modal');
+        const resetScoreForm = document.getElementById('reset-score-form');
+        const cancelResetScoreBtn = document.getElementById('cancel-reset-score');
+        const pinInput = document.getElementById('pin-input');
+        const pinError = document.getElementById('pin-error');
 
         // Firebase Setup
         const firebaseConfig = {
@@ -477,6 +506,14 @@
             addWordBtn.addEventListener('click', () => addWordModal.classList.remove('hidden'));
             cancelAddWordBtn.addEventListener('click', () => addWordModal.classList.add('hidden'));
             addWordForm.addEventListener('submit', handleAddWord);
+            resetScoreBtn.addEventListener('click', () => {
+                pinInput.value = '';
+                pinError.textContent = '';
+                resetScoreModal.classList.remove('hidden');
+                pinInput.focus();
+            });
+            cancelResetScoreBtn.addEventListener('click', () => resetScoreModal.classList.add('hidden'));
+            resetScoreForm.addEventListener('submit', handleResetScore);
         }
 
         function handleAddWord(e) {
@@ -498,6 +535,24 @@
                 addWordForm.reset();
                 addWordModal.classList.add('hidden');
                 updateAndRenderBlocks();
+            }
+        }
+
+        async function handleResetScore(e) {
+            e.preventDefault();
+            const enteredPin = pinInput.value;
+            if (enteredPin === '2542') {
+                totalPoints = 0;
+                incorrectWords = [];
+                barWords = [];
+                await saveUserData(); // This will trigger onSnapshot and re-render
+                resetScoreModal.classList.add('hidden');
+                pinInput.value = '';
+                pinError.textContent = '';
+            } else {
+                pinError.textContent = 'Incorrect PIN. Please try again.';
+                pinInput.value = '';
+                pinInput.focus();
             }
         }
 
